--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1035,3 +1035,22 @@
       sla:
         failure_rate:
           max: 0
+
+  NovaServers.boot_and_update_server:
+    -
+      args:
+        flavor:
+          name: {{flavor_name}}
+        image:
+          name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
