--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1,5 +1,6 @@
 {%- set cirros_image_url = "http://download.cirros-cloud.net/0.3.4/cirros-0.3.4-x86_64-disk.img" %}
 {% set image_name = "^(cirros.*uec|TestVM)$" %}
+{% set flavor_name = "m1.tiny" %}
 ---
   Authenticate.validate_nova:
     -
@@ -53,7 +54,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -71,7 +72,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -89,7 +90,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         force_delete: true
@@ -109,7 +110,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         detailed: True
@@ -129,7 +130,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -148,7 +149,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -167,7 +168,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -186,7 +187,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         from_image:
           name: {{image_name}}
         to_image:
@@ -207,7 +208,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
       runner:
@@ -237,7 +238,7 @@
           users_per_tenant: 1
         servers:
           flavor:
-              name: "m1.tiny"
+              name: {{flavor_name}}
           image:
               name: {{image_name}}
           servers_per_tenant: 2
@@ -253,7 +254,7 @@
         image:
           name: {{image_name}}
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
       runner:
         type: "constant"
         times: 2
@@ -272,7 +273,7 @@
         image:
           name: {{image_name}}
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
       runner:
         type: "constant"
         times: 2
@@ -289,7 +290,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         to_flavor:
@@ -309,7 +310,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         to_flavor:
@@ -331,7 +332,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         to_flavor:
@@ -358,7 +359,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         to_flavor:
@@ -385,7 +386,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         actions:
@@ -419,7 +420,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -438,7 +439,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         volume_size: 1
@@ -458,7 +459,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
         volume_size: 1
@@ -479,7 +480,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -496,7 +497,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -540,7 +541,7 @@
     -
       args:
         flavor:
-            name: "m1.tiny"
+            name: {{flavor_name}}
         image:
             name: {{image_name}}
       runner:
@@ -557,7 +558,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: "rally-named-image-from-context"
       runner:
@@ -675,7 +676,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
         security_group_count: 5
@@ -744,7 +745,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
       runner:
@@ -763,7 +764,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
         key_type: "x509"
@@ -788,7 +789,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
         count: 5
@@ -837,7 +838,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
         floating_network: "public"
@@ -872,7 +873,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
         volume_args:
@@ -897,7 +898,7 @@
     -
       args:
         flavor:
-          name: "m1.tiny"
+          name: {{flavor_name}}
         image:
           name: {{image_name}}
         use_floating_ip: false
