--- a/rally-jobs/rally-murano.yaml
+++ b/rally-jobs/rally-murano.yaml
@@ -9,6 +9,8 @@
         users:
           tenants: 2
           users_per_tenant: 2
+        murano_environments:
+          environments_per_tenant: 2
       sla:
         failure_rate:
           max: 0
