--- a/samples/tasks/scenarios/murano/list-environments.yaml
+++ b/samples/tasks/scenarios/murano/list-environments.yaml
@@ -9,3 +9,5 @@
         users:
           tenants: 2
           users_per_tenant: 2
+        murano_environments:
+          environments_per_tenant: 2
