--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -666,3 +666,20 @@
       sla:
           failure_rate:
             max: 0
+    -
+      args:
+        size:
+          min: 1
+          max: 1
+        nested_level: 2
+      runner:
+        type: "constant"
+        times: 1
+        concurrency: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+          failure_rate:
+            max: 0
