--- a/samples/tasks/scenarios/cinder/create-volume-and-clone.yaml
+++ b/samples/tasks/scenarios/cinder/create-volume-and-clone.yaml
@@ -16,6 +16,7 @@
         size:
           min: 1
           max: 5
+        nested_level: 3
       runner:
         type: "constant"
         times: 3
