--- a/rally-jobs/rally-neutron.yaml
+++ b/rally-jobs/rally-neutron.yaml
@@ -230,6 +230,29 @@
         failure_rate:
           max: 0
 
+  NeutronNetworks.create_and_show_ports:
+    -
+      args:
+        network_create_args: {}
+        port_create_args: {}
+        ports_per_network: 2
+      runner:
+        type: "constant"
+        times: {{smoke or 5}}
+        concurrency: {{smoke or 2}}
+      context:
+        network: {}
+        users:
+          tenants: {{smoke or 2}}
+          users_per_tenant: {{smoke or 2}}
+        quotas:
+          neutron:
+            network: -1
+            port: -1
+      sla:
+        failure_rate:
+          max: 0
+
   NeutronNetworks.create_and_update_networks:
     -
       args:
