--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -166,6 +166,40 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.create_volume_and_update_readonly_flag:
+    -
+      args:
+        size: 1
+        read_only: true
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        size: 1
+        read_only: false
+        image:
+          name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_and_list_volume:
     -
       args:
