--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -754,6 +754,21 @@
           failure_rate:
             max: 0
 
+  CinderVolumeTypes.create_and_delete_volume_type:
+    -
+      args: {}
+      runner:
+        type: "constant"
+        times: 5
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.list_transfers:
     -
       args:
