--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -336,6 +336,38 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.create_and_accept_transfer:
+    -
+      args:
+        size: 1
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+    -
+      args:
+        size: 1
+        image:
+          name: {{image_name}}
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   CinderVolumes.create_and_extend_volume:
     -
       args:
