--- a/rally-jobs/cinder.yaml
+++ b/rally-jobs/cinder.yaml
@@ -719,3 +719,19 @@
       sla:
           failure_rate:
             max: 0
+
+  CinderVolumes.list_transfers:
+    -
+      args:
+        detailed: true
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
