--- a/rally-jobs/nova.yaml
+++ b/rally-jobs/nova.yaml
@@ -1213,6 +1213,24 @@
         failure_rate:
           max: 0
 
+  NovaFlavors.create_and_delete_flavor:
+    -
+      runner:
+        type: "constant"
+        concurrency: 2
+        times: 10
+      args:
+        ram: 500
+        vcpus : 1
+        disk: 1
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        failure_rate:
+          max: 0
+
   NovaFlavors.create_and_list_flavor_access:
     -
       args:
